# misis2024s-23-04-popadina-v-a

./: .gitignore  CMakeLists.txt  codeforces.id  reports.md  status.md
prj.app/roborun/: roborun.cpp
prj.app/timing-q/: CMakeLists.txt  timing_q.cpp
prj.codeforces/: 1742c.cpp  1883b.cpp  1883c.cpp  CMakeLists.txt
prj.cw/: CMakeLists.txt  back.cpp  colors.hpp  readme.md
prj.lab/: CMakeLists.txt
prj.lab/bitset/: CMakeLists.txt  bitset.cpp  bitset.hpp
prj.lab/complex/: CMakeLists.txt  complex.cpp  complex.hpp
prj.lab/dynarr/: dynarr.cpp  dynarr.hpp
prj.lab/queuearr/: CMakeLists.txt  queuearr.cpp  queuearr.hpp
prj.lab/queuearrt/: CMakeLists.txt  queuearrt.hpp
prj.lab/queuelst/: CMakeLists.txt  queuelst.cpp  queuelst.hpp
prj.lab/queuelstpr/: queuelstpr.cpp  queuelstpr.hpp
prj.lab/queuelstprt/: CMakeLists.txt  queuelstprt.hpp
prj.lab/queuelstspr/: CMakeLists.txt  queuelstspr.cpp  queuelstspr.hpp
prj.lab/queuelstt/: CMakeLists.txt  queuelstt.hpp
prj.lab/rational/: CMakeLists.txt  rational.cpp  rational.hpp
prj.lab/stackarr/: CMakeLists.txt  stackarr.cpp  stackarr.hpp
prj.lab/stackarrt/: CMakeLists.txt  stackarrt.hpp
prj.lab/stacklst/: CMakeLists.txt  stacklst.cpp  stacklst.hpp
prj.lab/stacklstt/: CMakeLists.txt  stacklstt.hpp
prj.test/: CMakeLists.txt  test_bitset.cpp  test_complex.cpp  test_dynarr.cpp  test_queuearr.cpp  test_queuearrt.cpp  test_queuelst.cpp  test_queuelstpr.cpp  test_queuelstt.cpp  test_rational.cpp  test_stackarr.cpp  test_stackarrt.cpp  test_stacklst.cpp  test_stacklstt.cpp  utils.hpp
