add_subdirectory(complex)
add_subdirectory(bitset)
add_subdirectory(dynarr)

add_subdirectory(queuearr)
add_subdirectory(queuelst)
add_subdirectory(queuelstpr)

add_subdirectory(queuearrt)
add_subdirectory(queuelstt)
add_subdirectory(queuelstprt)

add_subdirectory(rational)

add_subdirectory(stackarr)
add_subdirectory(stacklst)

add_subdirectory(stackarrt)
add_subdirectory(stacklstt)
